# relz_search

./: CMakeLists.txt  README.md
data/: ref_preliminar.txt  seq_preliminar.txt  yeast_queries.tgz  yeast_ref.tgz
include/: CoderBlocks.h  CoderBlocksRelz.h  CompactedText.h  Compressor.h  FactorsConfig.h  FactorsFastIteratorComparator.h  FactorsIndex.h  FactorsIndexV3.h  FactorsIterator.h  FactorsIteratorCompacted.h  FactorsIteratorComparator.h  HashTrie.h  HashTrieChar.h  HashTriev2.h  HashTriev3.h  KarpRabin.h  KarpRabinFactorsSuffixes.h  KarpRabinFactorsSuffixesv1.h  KarpRabinFactorsSuffixesv2.h  ReferenceIndexRR.h  RelzIndex.h  RelzIndexHash.h  RelzIndexHashCompacted.h  RelzIndexHashCompactedRef.h  RelzIndexHashUncompacted.h  RelzIndexReference.h
programs/: build_reference.cpp  build_relz_basic.cpp  build_relz_hash.cpp  build_relz_hash_compacted.cpp  build_relz_hash_compacted_ref.cpp  build_relz_hash_original.cpp  build_relz_hash_uncompacted.cpp  build_relz_hashkr2g.cpp  build_relz_reference.cpp  build_relz_reference_simple.cpp  build_relz_reference_v2.cpp  clean_text.cpp  compress.cpp  compress_factors.cpp  generate_data.cpp  generate_queries.cpp  killif.sh  relz_search.cpp  relz_search_basic.cpp  relz_search_hash.cpp  relz_search_hash_compacted_ref.cpp  relz_search_hash_simple.cpp  relz_search_hash_table.cpp  relz_search_hash_uncompacted.cpp  relz_search_hashkr2g.cpp  relz_search_hashkr2g_table.cpp  relz_search_reference.cpp  relz_search_reference_simple.cpp  relz_search_reference_v2.cpp  relz_search_v2.cpp  relz_search_v3.cpp  test_compacted_text.cpp  test_karp_rabin.cpp  test_rmq.cpp  test_sdsl.cpp  test_search.cpp
src/: CoderBlocks.cpp  CoderBlocksRelz.cpp  CompactedText.cpp  Compressor.cpp  CompressorSingleBuffer.cpp  DecoderBlocksRelz.cpp  FactorsConfig.cpp  FactorsFastIteratorComparator.cpp  FactorsIndex.cpp  FactorsIndexV3.cpp  FactorsIterator.cpp  FactorsIteratorCompacted.cpp  FactorsIteratorComparator.cpp  HashTrie.cpp  HashTrieChar.cpp  HashTriev2.cpp  HashTriev3.cpp  KarpRabin.cpp  KarpRabinFactorsSuffixes.cpp  KarpRabinFactorsSuffixesv1.cpp  KarpRabinFactorsSuffixesv2.cpp  LengthsCoderBlocks.cpp  Metadata.cpp  PositionsCoderBlocks.cpp  RMQRMM64.cpp  ReferenceIndexBasic.cpp  RelzIndex.cpp  RelzIndexHash.cpp  RelzIndexHashCompacted.cpp  RelzIndexHashCompactedRef.cpp  RelzIndexHashUncompacted.cpp  RelzIndexReference.cpp  TextFilter.cpp
