cmake_minimum_required(VERSION 2.8.9)
project(relz)
set(CMAKE_BUILD_TYPE Release)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O5")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -O5")
else()
    message(FATAL_ERROR "Compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
endif()

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include_directories(${CMAKE_SOURCE_DIR}/include)
file(GLOB SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")

add_executable(compress "${CMAKE_SOURCE_DIR}/programs/compress.cpp")
add_executable(decompress "${CMAKE_SOURCE_DIR}/programs/decompress.cpp")
add_executable(build_reference "${CMAKE_SOURCE_DIR}/programs/build_reference.cpp")
add_executable(test_sdsl "${CMAKE_SOURCE_DIR}/programs/test_sdsl.cpp")
add_executable(build_relz_basic "${CMAKE_SOURCE_DIR}/programs/build_relz_basic.cpp")
add_executable(build_relz_reference "${CMAKE_SOURCE_DIR}/programs/build_relz_reference.cpp")
add_executable(build_relz_reference_simple "${CMAKE_SOURCE_DIR}/programs/build_relz_reference_simple.cpp")
add_executable(build_relz_hash "${CMAKE_SOURCE_DIR}/programs/build_relz_hash.cpp")
add_executable(build_relz_hash_uncompacted "${CMAKE_SOURCE_DIR}/programs/build_relz_hash_uncompacted.cpp")
add_executable(relz_search_basic "${CMAKE_SOURCE_DIR}/programs/relz_search_basic.cpp")
add_executable(relz_search_reference "${CMAKE_SOURCE_DIR}/programs/relz_search_reference.cpp")
add_executable(relz_search_reference_simple "${CMAKE_SOURCE_DIR}/programs/relz_search_reference_simple.cpp")
add_executable(relz_search_hash "${CMAKE_SOURCE_DIR}/programs/relz_search_hash.cpp")
add_executable(relz_search_hash_simple "${CMAKE_SOURCE_DIR}/programs/relz_search_hash_simple.cpp")
add_executable(relz_search_hash_uncompacted "${CMAKE_SOURCE_DIR}/programs/relz_search_hash_uncompacted.cpp")
add_executable(clean_text "${CMAKE_SOURCE_DIR}/programs/clean_text.cpp")
add_executable(generate_queries "${CMAKE_SOURCE_DIR}/programs/generate_queries.cpp")
add_executable(test_karp_rabin "${CMAKE_SOURCE_DIR}/programs/test_karp_rabin.cpp")
add_executable(test_compacted_text "${CMAKE_SOURCE_DIR}/programs/test_compacted_text.cpp")

add_library(relz SHARED ${SOURCES})
link_directories(${CMAKE_BINARY_DIR})

target_link_libraries(compress relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(decompress relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(build_reference relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(test_sdsl relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(build_relz_basic relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(build_relz_reference relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(build_relz_reference_simple relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(build_relz_hash relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(build_relz_hash_uncompacted relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(relz_search_basic relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(relz_search_reference relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(relz_search_reference_simple relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(relz_search_hash relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(relz_search_hash_simple relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(relz_search_hash_uncompacted relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(clean_text)
target_link_libraries(generate_queries)
target_link_libraries(test_karp_rabin relz pthread sdsl divsufsort divsufsort64)
target_link_libraries(test_compacted_text relz pthread sdsl divsufsort divsufsort64)

if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set (CMAKE_INSTALL_PREFIX "/usr/" CACHE PATH "default install path" FORCE )
endif()

install(TARGETS relz DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
install(TARGETS compress DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/relz FILES_MATCHING PATTERN "*.h")

